# qg-rust

./: Cargo.toml  README.md
src/: advanced_distros.rs  basic_distros.rs  distros.rs  libosinfo.rs  main.rs  quickget.rs  utils.rs
src/advanced_distros/: add_distro.rs
src/basic_distros/: add_distro.rs
src/distros/: add_distro.rs  fedora.rs  macos.rs  ubuntu.rs  windows.rs
