[package]
name = "quickget-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"downloader" = "0.2.7"
chksum = { version = "0.3.0", default-features = false, features = ["md5", "sha1", "sha2-256", "sha2-512"] }
reqwest = { version = "0.11", features = ["blocking"] }