[package]
name = "quickget-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chksum = { version = "0.3.0", default-features = false, features = ["md5", "sha1", "sha2-256", "sha2-512"] }
reqwest = { version = "0.11", features = ["blocking", "stream"] }
indicatif = "0.17.8"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"