[package]
name = "qgdl"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "stream", "cookies"] }
indicatif = "0.17.8"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
sha1 = "0.10.6"
sha2 = "0.10.8"
md-5 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[profile.dev]
opt-level = 3
